--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -67,6 +67,8 @@
         </div>
         {{{ body }}}
     </div>
+
+    <script src="{{clientUrl}}/Content/js/formOptions.js"></script>
     <footer class="container-fluid text-center footer">
         © 2019 PrimeGov, LLC. All Rights Reserved
     </footer>
